--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     overflow-y: hidden;
     background-image: url('bg.png');
     background-size: cover;
-    background-position: center;
+    background-position: bottom center;
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
@@ -77,14 +77,13 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: contain;
-    background-position: center;
+    background-size: cover;
+    background-position: bottom center;  
     background-repeat: no-repeat;
     pointer-events: none;
     z-index: 1;
     will-change: transform;
 }
-
 .section .content,
 .edu-container,
 .skills-container,
